@@ -3,7 +3,7 @@
 ## ----------------------
 
 readImzML <- function(name, folder=getwd(), attach.only=FALSE,
-	mz.accuracy=200, units.accuracy=c("ppm", "mz"), ...)
+	mass.accuracy=200, units.accuracy=c("ppm", "mz"), ...)
 {
 	# check for files
 	xmlpath <- normalizePath(file.path(folder, paste(name, ".imzML", sep="")),
@@ -45,9 +45,9 @@ readImzML <- function(name, folder=getwd(), attach.only=FALSE,
 		if ( ibdtype == "processed" ) {
 			if ( match.arg(units.accuracy) == "ppm" ) {
 				mz.max <- max(sapply(mz, max))
-				mz.accuracy <- mz.accuracy * 1e-6 * mz.max
+				mass.accuracy <- mass.accuracy * 1e-6 * mz.max
 			}
-			mz <- lapply(mz, roundnear, precision=mz.accuracy)
+			mz <- lapply(mz, roundnear, precision=mass.accuracy)
 			mz.names <- lapply(mz, as.character)
 			mz <- sort(unique(unlist(mz)))
 			mz.keys <- as.character(mz)
