@@ -13,7 +13,7 @@ readMSIData(file, \dots)
 
 ## Read imzML files
 readImzML(name, folder=getwd(), attach.only=FALSE,
-	mz.accuracy=200, units.accuracy=c("ppm", "mz"), \dots)
+	mass.accuracy=200, units.accuracy=c("ppm", "mz"), \dots)
 
 ## Read Analyze 7.5 files
 readAnalyze(name, folder=getwd(), attach.only=FALSE, \dots)
@@ -23,8 +23,8 @@ readAnalyze(name, folder=getwd(), attach.only=FALSE, \dots)
 	\item{name}{The common file name for the '.imzML' and '.ibd' files for imzML or for the '.hdr', '.t2m', and '.img' files for Analyze 7.5.}
 	\item{folder}{The path to the folder containing the data files.}
 	\item{attach.only}{Attach the file as a \code{\linkS4class{Binmat}} on-disk matrix for reading on-demand, rather than loading the data into memory. This feature is still experimental.}
-	\item{mz.accuracy}{For 'processed' imzML files, the accuracy to which the m/z values will be rounded after reading. This should be equal to or greater than the native accuracy of the mass spectrometer.}
-	\item{units.accuracy}{The units for 'mz.accuracy'.}
+	\item{mass.accuracy}{For 'processed' imzML files, the accuracy to which the m/z values will be rounded after reading. This should be equal to or greater than the native accuracy of the mass spectrometer.}
+	\item{units.accuracy}{The units for 'mass.accuracy'.}
 	\item{\dots}{Additional arguments passed to read functions.}
 }
 \details{
