@@ -4,13 +4,14 @@ CHANGES IN VERSION 1.3.1 [2016-2-19]
 
 SIGNIFICANT USER-VISIBLE CHANGES
 
-    o Added 'mz.accuracy' and 'units.accuracy' arguments for
+    o Added 'mass.accuracy' and 'units.accuracy' arguments for
         controlling the m/z accuracy when reading 'processed' imzML
 
 BUG FIXES
 
     o Fixed bug in reading 'processed' imzML format that caused
         mass spectra to be reconstructed in the wrong order
+    o Improved speed accessing columns of Hashmat sparse matrices
 
 CHANGES IN VERSION 1.3.0 [2015-12-16]
 -----------------------------------
